k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trade-ssm
  labels:
    app.kubernetes.io/part-of: trade-ssm
